# dummyApp

./: .gitignore  Dockerfile  api.dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
dummyapp/: app.py
dummyapp/bar/: app.py
dummyapp/foo/: app.py
